# api_examples_python

./: README.md
easyChatApp/: .gitignore  LICENSE  README.md  docker-compose.yaml
easyChatApp/backend/: .env.dev  dockerfile  pyproject.toml  run.py
easyChatApp/backend/api/: __init__.py
easyChatApp/backend/api/config/: __init__.py  logging.py  req_logging.py
easyChatApp/backend/api/database/: __init__.py  base.py  basetemplate.py  connection.py  models.py
easyChatApp/backend/api/schemas/: chat.py  example.py  groupe.py  response.py  user.py
easyChatApp/backend/api/services/: chat.py  example.py  groupe.py  helloworld.py  login.py  user.py
easyChatApp/backend/api/views/: __init__.py  chat.py  example.py  groupe.py  healthcheck.py  helloworld.py  login.py  user.py
easyChatApp/mysql/: .env.dev
easyChatApp/nginx/: nginx.conf
easyChatApp/redis/: .env.dev  dockerfile
